bayley by cohort

--- a/assessing_iq_critiques.tex
+++ b/assessing_iq_critiques.tex
@@ -3,21 +3,22 @@
 
 \begin{document}
 
-\noindent This section of the appendix assess some of the critiques to ABC, which could apply to CARE as well. This focus on the first phase of the program, to which we refer simply as ABC in this section of the appendix.\\
+\noindent This section of the appendix assesses some of the critiques to ABC, which could apply to CARE as well. The critiques focus on the first phase of the program, to which we refer simply as ABC in this section of the appendix.\\
 
-\noindent \citet{} asks if ABC prevented socio-cultural mental retardation. He focuses on different measures of cognition, and generically calls them IQ. His main focus is on the difference raw mean difference in the Bayley Mental Development Index (MDI) at age 1.\footnote{The Bayley Mental Development Index is a standard measure of cognition at taken between ages 0 and 2 \citep{•}.} He finds a noticeable difference in the mean difference between cohorts 1 and 2 and cohorts 2 and 4, as early as six months after the treatment began. As \citet{} argues, this difference is conspicuous and we display it in Table~\ref{tab:}.\\
+\noindent \citet{} asks if ABC prevented socio-cultural mental retardation. He focuses on different measures of cognition, and generically calls them IQ. His main focus is on the raw mean difference between the treatment and the control groups in the Bayley Mental Development Index (MDI) at age 1.\footnote{The Bayley Mental Development Index is a standard measure of cognition at taken between ages 0 and 2 \citep{•}.} He finds a noticeable difference in the mean difference between cohorts 1 and 2 and cohorts 2 and 4, as early as six months after the treatment began. As \citet{} argues, this difference is conspicuous and we display it in Table~\ref{tab:}.\\
 
-\noindent \citet{} suggests some possibilities: ``an essential question is whether the differences at 6 months of age were due to the intervention or where preexisting (p. 230)''. \citet{} proceeds with speculative exercises that lead him to conclude that it is questionable to conclude that the mean difference between the treatment and control groups as early as age six months is a consequence of the treatment.\footnote{The exact quote is: ``Even if the differences between experimental and control groups at 6 months of age were a consequence of the first few months of intervention, which is questionable, the negligible additional effects after age 4.5 more years in the program should at least make one cautious about this kind of intervention's potential [\ldots] We asses the former point before getting to the latter.''}\\
+\noindent \citet{} states that: ``an essential question is whether the differences at 6 months of age were due to the intervention or where preexisting'' \citep[][p. 230]{•}. \citet{} proceeds with speculative exercises that lead him to state that it is questionable to conclude that the mean difference between the treatment and control groups as early as age six months is a consequence of the treatment.\footnote{The exact quote is: ``Even if the differences between experimental and control groups at 6 months of age were a consequence of the first few months of intervention, which is questionable, the negligible additional effects after age 4.5 more years in the program should at least make one cautious about this kind of intervention's potential [\ldots]'' \citep[][p. 235]{•}. We asses the former point before getting to the latter.}\\
 
 \noindent His argument oscillates from not receiving not receiving information on the maternal characteristics which he considers fundamental for his analysis to comparing test scores over the year, and tests scores \textit{do not have a well-defined scale}.\\ 
 
 \noindent We make three annotations with respect to the comments in \citet{}.\\ 
 
-\noindent First, when jointly testing the hypothesis of differences in a battery of observed characteristics, we fail to reject any difference between the families of these children (see Table~\ref{tab:baseline_coh3} and Table~\ref{tab:baseline_coh4}). Even when the point estimates present some differences, they are minimal. For example, treatment-group mother differ, on average, by having one more point in the IQ score, which has a population standard deviation of 15. This makes it less likely that there were some intrinsic differences between the treatment and control groups before randomization.\\
+\noindent \textbf{Neither in cohort 3 nor in cohort 4 do mothers differ in observed characteristics between the treatment and the control groups.} When jointly testing the hypothesis of differences in a battery of observed characteristics, we fail to reject any difference between the families of these children (see Table~\ref{tab:baseline_coh3} and Table~\ref{tab:baseline_coh4}). Even when the point estimates present some differences, they are minimal. For example, treatment-group mothers differ, on average, by having one more point in the IQ score, which has a population standard deviation of 15.\\
 
-\noindent A more recent program, the Infant Health and Development Program (IHDP), treated children from ages 0 to 3. \citet{Gross_Spiker_etal_1997_BOOKHelpinglowbirth} thoroughly describe this program. A lots of its elements were based on ABC and CARE. The program offered an average of eight hours a week of center-based childcare from ages 1 to 3, weekly home visits from ages 0 to 1, and bi-monthly home visits from ages 1 to 3. Measures on the Bayley MDI at 12 and 24 months are available. The most intensive part of the treatment, center-based childcare, began at age 12 months in IHDP while it began at birth 0 in ABC. As in ABC, after a few months of center-based childcare, the effects on cognition were substantial in IHDP. This makes more likely possibility of treatment effects on measures of cognition to appear very early in life, for programs similar to ABC.\\
+\noindent \textbf{Other early childhood education programs have generated gains in cognition very early in life, as soon as after a year of the program's beginning.} A more recent program, the Infant Health and Development Program (IHDP), treated children from ages 0 to 3. \citet{Gross_Spiker_etal_1997_BOOKHelpinglowbirth} thoroughly describe this program. A lot of its elements were based on ABC and CARE. The program offered an average of eight hours a week of center-based childcare from ages 1 to 3, weekly home visits from ages 0 to 1, and bi-monthly home visits from ages 1 to 3. Measures on the Bayley MDI at 12 and 24 months are available. The most intensive part of the treatment, center-based childcare, began at age 12 months in IHDP while it began at birth 0 in ABC. As in ABC, after a few months of center-based childcare, the effects on cognition were substantial in IHDP.
+\input{output/ihdp_bayley}
 
-\noindent Second, when partialing out in a linear regression the score in the Bayley MDI tests both at six and twelve months of age, the treatment effects on IQ, measures by the mean difference between the treatment and the control groups, are still significant and are sustained up to age 21 (see Figure~\ref{fig:treatiqsabc}).
+\noindent \textbf{The effects on cognition are sustained throughout childhood and up to age 21 even when partialing out the Bayley MDI at ages 12 and 24 months.} When partialing out in a linear regression the score in the Bayley MDI tests both at twelve and twenty-four months of age, the treatment effects on cognition, measured by the mean difference between the treatment and the control groups in different IQ test scores, are still significant and are sustained up to age 21 (see Figure~\ref{fig:treatiqsabc}).
 
 \begin{figure}[H]
 		\caption{Treatment Effects on IQ, ABC} \label{fig:treatiqsabc}
