--- a/output/ihdp_bayley.tex
+++ b/output/ihdp_bayley.tex
@@ -1,15 +1,21 @@
-\documentclass[]{article}
-\setlength{\pdfpagewidth}{8.5in} \setlength{\pdfpageheight}{11in}
-\begin{document}
-\begin{tabular}{lcc} \hline
- & (1) & (2) \\\
- & bmdi1 & bmdi2 \\\
-VARIABLES & bayley\_mdi1 & bayley\_mdi2 \\\ \hline
+\begin{table}[H] 
+\begin{threeparttable}
+\caption{Treatment Effects on the Bayley MDI, IHDP}
+\label{table:ihdp}
+\centering 
+\begin{tabular}{lcc} \hline \hline
+ & (1) & (2) \\
+ & Bayley MDI, 12 Months & Bayley MDI, 24 Months \\ \hline
  &  &  \\\
-Treatment group & 0.142 & 9.958*** \\\
- & (0.968) & (1.498) \\\
- &  &  \\\
-Observations & 893 & 910 \\\
- R-squared & 0.000 & 0.067 \\\ \hline
+Mean Treatment - Mean Control & 0.142 & 9.958 \\
+ & (0.968) & (1.498) \\
+ &  &  \\ \hline
+Observations & 893 & 910 \\
+$R^2$ & 0.000 & 0.067 \\ \hline \hline  
 \end{tabular}
-\end{document}
+\begin{tablenotes}
+\footnotesize
+\item Note: This table displays the mean difference between the treatment and control groups in two measures of the Bayley Mental Development Index, for the Infant Health and Development Program using the principal analysis sample. Robust standard errors clustered by state and an indicator of weight below 2,000 grams in parentheses.
+\end{tablenotes}
+\end{threeparttable}
+\end{table}
