--- a/output/ihdp_bayley.tex
+++ b/output/ihdp_bayley.tex
@@ -1,6 +1,6 @@
 \begin{table}[H] 
 \begin{threeparttable}
-\caption{Treatment Effects on the Bayley MDI, IHDP}
+\caption{Treatment - Control Mean Difference, IHDP}
 \label{table:ihdp}
 \centering 
 \begin{tabular}{lcc} \hline \hline
