--- a/output/abc_cohorts.tex
+++ b/output/abc_cohorts.tex
@@ -1,7 +1,7 @@
 \begin{table}[H] 
 \begin{threeparttable}
 \caption{Treatment - Control Mean Difference by Cohort, ABC}
-\label{table:abc}
+\label{table:cohorts}
 \centering 
 \begin{tabular}{lcc} \hline \hline
  & (1) & (2) \\
@@ -16,7 +16,7 @@ Cohort 3 & 9.143 & 10.038 \\
 Cohort 4 & 7.829 & 13.713 \\
  & (5.801) & (5.830) \\ \\ \hline
 Observations & 112 & 110 \\
- R-squared & 0.055 & 0.110 \\ \hline \hline 
+$R^2$ & 0.055 & 0.110 \\ \hline \hline 
  \end{tabular}
 \begin{tablenotes}
 \footnotesize
