--- a/output/abc_noncomp_e1.tex
+++ b/output/abc_noncomp_e1.tex
@@ -1,17 +1,22 @@
-\documentclass[]{article}
-\setlength{\pdfpagewidth}{8.5in} \setlength{\pdfpageheight}{11in}
-\begin{document}
-\begin{tabular}{lcccc} \hline
+\begin{table}[H] 
+\begin{threeparttable}
+\caption{Assessing Non-compliance in ABC, Exercise 1}
+\label{table:nc1}
+\centering 
+\begin{tabular}{ccccc} \hline \hline
  & (1) & (2) & (3) & (4) \\
- & iq3y\_itt & iq3y\_iv & iq5y\_itt & iq5y\_iv \\
-VARIABLES & IQ at age 3y months & IQ at age 3y months & IQ at age 5y months & IQ at age 5y months \\ \hline
- &  &  &  &  \\
-Randomization into center-based care (ABC and CARE) & 14.970*** &  & 6.398** &  \\
+ & IQ, Age 3 & IQ, Age 3  & IQ, Age 5 & IQ, Age 5 \\ \hline
+ &  &  & & \\\
+Treatment - Control Mean Difference & 14.970 &  & 6.398 &  \\
  & (2.794) &  & (2.494) &  \\
-Indicator for the actual treatment receipt for center-based care &  & 16.245*** &  & 6.943*** \\
- &  & (2.877) &  & (2.643) \\
- &  &  &  &  \\
-Observations & 100 & 100 & 100 & 100 \\
- R-squared & 0.227 & 0.289 & 0.063 & 0.088 \\ \hline
-\end{tabular}
-\end{document}
+Bloom &  & 16.245 &  & 6.943 \\
+ &  & (2.877) &  & (2.643) \\ \hline
+Observations & 100 & 100 & 100 & 100  \\
+ $R^2$ & 0.227 & 0.289 & 0.063 & 0.088 \\ \hline \hline
+ \end{tabular}
+\begin{tablenotes}
+\footnotesize
+\item Note: This table displays the mean difference between the treatment and control groups and the same difference adjusted for non-compliance (Bloom estimator) in two measures of IQ, the Stanford-Binet IQ Score at age 3 and the Wechsler Preschool and Primary Scale of Intelligence at age 5. Homoskedastic, asymptotic standard errors are in parentheses.
+\end{tablenotes}
+\end{threeparttable}
+\end{table}
