--- a/output/abc_noncomp_e2.tex
+++ b/output/abc_noncomp_e2.tex
@@ -1,17 +1,23 @@
-\documentclass[]{article}
-\setlength{\pdfpagewidth}{8.5in} \setlength{\pdfpageheight}{11in}
-\begin{document}
-\begin{tabular}{lcccc} \hline
+\begin{table}[H] 
+\begin{threeparttable}
+\caption{Assessing Non-compliance in ABC, Exercise 2}
+\label{table:nc2}
+\centering 
+\begin{tabular}{ccccc} \hline \hline
  & (1) & (2) & (3) & (4) \\
- & iq3y\_itt & iq3y\_iv & iq5y\_itt & iq5y\_iv \\
-VARIABLES & IQ at age 3y months & IQ at age 3y months & IQ at age 5y months & IQ at age 5y months \\ \hline
- &  &  &  &  \\
-Randomization into center-based care (ABC and CARE) & 12.908*** &  & 4.284 &  \\
+ & IQ, Age 3 & IQ, Age 3  & IQ, Age 5 & IQ, Age 5 \\ \hline
+ &  &  & & \\\
+Treatment - Control Mean Difference & 12.908 &  & 4.284 &  \\
  & (2.901) &  & (2.647) &  \\
-Indicator for the actual treatment receipt for center-based care &  & 15.111*** &  & 5.016* \\
- &  & (3.061) &  & (2.960) \\
- &  &  &  &  \\
+Bloom &  & 15.111 &  & 5.016 \\
+ &  & (3.061) &  & (2.960) \\ \\ \hline
 Observations & 104 & 104 & 104 & 104 \\
- R-squared & 0.163 & 0.306 & 0.025 & 0.093 \\ \hline
-\end{tabular}
-\end{document}
+ $R^2$ & 0.163 & 0.306 & 0.025 & 0.093 \\ \hline \hline
+ \end{tabular}
+\begin{tablenotes}
+\footnotesize
+\item Note: This table displays the mean difference between the treatment and control groups and the same difference adjusted for non-compliance (Bloom estimator) in two measures of IQ, the Stanford-Binet IQ Score at age 3 and the Wechsler Preschool and Primary Scale of Intelligence at age 5. We impute the minimum test scores to two individuals initially assigned to treatment for whom we do not have data. The minimum in the two tests was 71. Homoskedastic, asymptotic standard errors are in parentheses.
+\end{tablenotes}
+\end{threeparttable}
+\end{table}
+
